# alt-search

./: Cargo.toml  LICENSE  README.MD
src/: cache.rs  cli.rs  lib.rs  main.rs  search.rs  watcher.rs
