[package]
name = "AltSearch"
version = "0.1.0"
edition = "2024"

[dependencies]
jwalk = "0.8.1"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
rayon = "1.11.0"
zstd = "0.13.3"
ahash = { version = "0.8.12", features = ["serde"] }